force-app/main/default/objects/Dan360_ProductSalesArea__c/Dan360_ProductSalesArea__c.object-meta.xml
<CustomObject>
    <label>Product Sales Area</label>
    <nameField>
        <label>Nombre de Product Sales Area</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Sales Area</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>