force-app/main/default/objects/Dan360_ProductSalesArea__c/fields/Bloqueo__c.field-meta.xml
<CustomField>
    <fullName>Bloqueo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bloqueo</label>
    <type>Checkbox</type>
</CustomField>