force-app/main/default/objects/Dan360_ProductSalesArea__c/fields/Dan360_Producto__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Sales Area</relationshipLabel>
    <relationshipName>Product_Sales_Area</relationshipName>
    <type>Lookup</type>
</CustomField>