force-app/main/default/objects/Dan360_ProductSalesArea__c/fields/Dan360_SalesArea__c.field-meta.xml
<CustomField>
    <fullName>Dan360_SalesArea__c</fullName>
    <label>Sales Area</label>
    <referenceTo>Dan360_SalesArea__c</referenceTo>
    <relationshipLabel>Product Sales Area</relationshipLabel>
    <relationshipName>Product_Sales_Area</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>